add sms-content file

--- a/index.html
+++ b/index.html
@@ -3,81 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>手机短信模拟</title>
+    <title>Document</title>
     <link rel="stylesheet" type="text/css" href="./css/app.css">
 </head>
 <body>
-    <div class="app">
-        <div class="header-first"></div>
-        <div class="item-sms-con">
-            <div class="item-sms-each">
-                <span class="item-sms-pic"><img src="./image/item1.png" alt="item1" /> </span>
-                <div class="item-sms-des">
-                    <div class="sms-title">
-                        <span class="sms-number">18092232658</span>
-                        <span class="sms-time">7/8</span>
-                    </div>
-                    <div class="sms-con">感谢您致电高新区枫叶惠人社区综合服务</div>
-                </div>
-            </div>
-
-            <div class="item-sms-each">
-                <span class="item-sms-pic"><img src="./image/item1.png" alt="item1" /> </span>
-                <div class="item-sms-des">
-                    <div class="sms-title">
-                        <span class="sms-number">18092232658</span>
-                        <span class="sms-time">7/8</span>
-                    </div>
-                    <div class="sms-con">感谢您致电高新区枫叶惠人社区综合服务</div>
-                </div>
-            </div>
-
-            <div class="item-sms-each">
-                <span class="item-sms-pic"><img src="./image/item1.png" alt="item1" /> </span>
-                <div class="item-sms-des">
-                    <div class="sms-title">
-                        <span class="sms-number">18092232658</span>
-                        <span class="sms-time">7/8</span>
-                    </div>
-                    <div class="sms-con">感谢您致电高新区枫叶惠人社区综合服务</div>
-                </div>
-            </div>
-
-            <div class="item-sms-each">
-                <span class="item-sms-pic"><img src="./image/item1.png" alt="item1" /> </span>
-                <div class="item-sms-des">
-                    <div class="sms-title">
-                        <span class="sms-number">18092232658</span>
-                        <span class="sms-time">7/8</span>
-                    </div>
-                    <div class="sms-con">感谢您致电高新区枫叶惠人社区综合服务</div>
-                </div>
-            </div>
-
-            <div class="item-sms-each">
-                <span class="item-sms-pic"><img src="./image/item1.png" alt="item1" /> </span>
-                <div class="item-sms-des">
-                    <div class="sms-title">
-                        <span class="sms-number">18092232658</span>
-                        <span class="sms-time">7/8</span>
-                    </div>
-                    <div class="sms-con">感谢您致电高新区枫叶惠人社区综合服务</div>
-                </div>
-            </div>
-
-            <div class="item-sms-each">
-                <span class="item-sms-pic"><img src="./image/item1.png" alt="item1" /> </span>
-                <div class="item-sms-des">
-                    <div class="sms-title">
-                        <span class="sms-number">18092232658</span>
-                        <span class="sms-time">7/8</span>
-                    </div>
-                    <div class="sms-con">感谢您致电高新区枫叶惠人社区综合服务</div>
-                </div>
-            </div>
-
-
+    <div class="app-con">
+        <div class="head-second">
+            <span class="phone-number">029 8958 0215</span>
         </div>
+        <div class="sms-content">
+            感谢您致电高新区枫叶惠人社区综合服务站，我们将竭诚为您服务。地址：西安市雁塔区高新区科技六路200号枫林意树2号楼商铺
+        </div>
+        <div class="con-bottom"></div>
 
     </div>
 </body>
