--- a/index.html
+++ b/index.html
@@ -9,10 +9,11 @@
 <body>
     <div class="app">
         <div class="header-first"></div>
-        <div class="item-sms-con">
-            <div class="item-sms-each">
-                <span class="item-sms-pic"><img src="./image/item1.png" alt="item1" /> </span>
-                <div class="item-sms-des">
+        <div class="sms-list">
+
+            <!-- <div class="sms-item">
+                <span class="sms-item-pic"><img src="./image/item1.png" alt="item1" /> </span>
+                <div class="sms-item-des">
                     <div class="sms-title">
                         <span class="sms-number">18092232658</span>
                         <span class="sms-time">7/8</span>
@@ -21,9 +22,9 @@
                 </div>
             </div>
 
-            <div class="item-sms-each">
-                <span class="item-sms-pic"><img src="./image/item1.png" alt="item1" /> </span>
-                <div class="item-sms-des">
+            <div class="sms-item">
+                <span class="sms-item-pic"><img src="./image/item1.png" alt="item1" /> </span>
+                <div class="sms-item-des">
                     <div class="sms-title">
                         <span class="sms-number">18092232658</span>
                         <span class="sms-time">7/8</span>
@@ -32,9 +33,9 @@
                 </div>
             </div>
 
-            <div class="item-sms-each">
-                <span class="item-sms-pic"><img src="./image/item1.png" alt="item1" /> </span>
-                <div class="item-sms-des">
+            <div class="sms-item">
+                <span class="sms-item-pic"><img src="./image/item1.png" alt="item1" /> </span>
+                <div class="sms-item-des">
                     <div class="sms-title">
                         <span class="sms-number">18092232658</span>
                         <span class="sms-time">7/8</span>
@@ -43,9 +44,9 @@
                 </div>
             </div>
 
-            <div class="item-sms-each">
-                <span class="item-sms-pic"><img src="./image/item1.png" alt="item1" /> </span>
-                <div class="item-sms-des">
+            <div class="sms-item">
+                <span class="sms-item-pic"><img src="./image/item1.png" alt="item1" /> </span>
+                <div class="sms-item-des">
                     <div class="sms-title">
                         <span class="sms-number">18092232658</span>
                         <span class="sms-time">7/8</span>
@@ -54,9 +55,9 @@
                 </div>
             </div>
 
-            <div class="item-sms-each">
-                <span class="item-sms-pic"><img src="./image/item1.png" alt="item1" /> </span>
-                <div class="item-sms-des">
+            <div class="sms-item">
+                <span class="sms-item-pic"><img src="./image/item1.png" alt="item1" /> </span>
+                <div class="sms-item-des">
                     <div class="sms-title">
                         <span class="sms-number">18092232658</span>
                         <span class="sms-time">7/8</span>
@@ -65,16 +66,16 @@
                 </div>
             </div>
 
-            <div class="item-sms-each">
-                <span class="item-sms-pic"><img src="./image/item1.png" alt="item1" /> </span>
-                <div class="item-sms-des">
+            <div class="sms-item">
+                <span class="sms-item-pic"><img src="./image/item1.png" alt="item1" /> </span>
+                <div class="sms-item-des">
                     <div class="sms-title">
                         <span class="sms-number">18092232658</span>
                         <span class="sms-time">7/8</span>
                     </div>
                     <div class="sms-con">感谢您致电高新区枫叶惠人社区综合服务</div>
                 </div>
-            </div>
+            </div> -->
 
 
         </div>
